using gnat_native 11.2.4 in worflows because Libadalang isn't able to parse the 12.1.2 runtime

--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -75,6 +75,8 @@ jobs:
 
     - name: installing alire
       uses: alire-project/setup-alire@v1
+      with:
+        toolchain: 'gnat_native=11.2.4 gprbuild'
 
 
 
